--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "util/parse-json.js", "util/parse-json.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/util/parse-json.js", "src/util/parse-json.js"],
   "exclude": ["node_modules"]
 }
