Image extension correction

--- a/src/assets/json/projects.json
+++ b/src/assets/json/projects.json
@@ -227,9 +227,9 @@
         "cover": "/images/casa-cholul/IMG-6934.jpg",
         "gallery": [
             "/images/casa-cholul/IMG-6934.jpg",
-            "/images/casa-cholul/IMG-6935.jpg",
-            "/images/casa-cholul/IMG-6936.jpg",
-            "/images/casa-cholul/IMG-6937.jpg"
+            "/images/casa-cholul/IMG-6935.jpeg",
+            "/images/casa-cholul/IMG-6936.jpeg",
+            "/images/casa-cholul/IMG-6937.jpeg"
         ]
     },
     {
