--- a/src/assets/json/projects.json
+++ b/src/assets/json/projects.json
@@ -164,7 +164,7 @@
         "name": "Casa Dzitya JR",
         "year": 2019,
         "ubication": null,
-        "cover": "/images/fachada-dzitya-c.v-600x450.jpg",
+        "cover": "/images/casa-dzitya-jr/1.jpg",
         "gallery": [
             "/images/casa-dzitya-jr/1.jpg",
             "/images/casa-dzitya-jr/2.jpeg",
