--- a/src/assets/json/projects.json
+++ b/src/assets/json/projects.json
@@ -4,7 +4,7 @@
         "name": "Departamentos Maya",
         "year": 2011,
         "ubication": "Maya, Mérida.",
-        "cover": "/images/fachada-principal-1200x809-64.jpg",
+        "cover": "/images/fachada-principal-1200x809-64-min.jpg",
         "gallery": []
     },
     {
@@ -12,7 +12,7 @@
         "name": "Casa Sab Pedro Cholul",
         "year": 2014,
         "ubication": "San Pedro Cholul, Mérida.",
-        "cover": "/images/fachada-1-1200x579-8.jpg",
+        "cover": "/images/fachada-1-1200x579-8-min.jpg",
         "gallery": []
     },
     {
@@ -20,7 +20,7 @@
         "name": "Casa San Ramón Norte",
         "year": 2015,
         "ubication": "San Ramon Norte, Mérida.",
-        "cover": "/images/fachada-principal-1-1200x879-0.jpg",
+        "cover": "/images/fachada-principal-1-1200x879-0-min.jpg",
         "gallery": []
     },
     {
@@ -28,7 +28,7 @@
         "name": "Casa Dzitya C -A",
         "year": 2015,
         "ubication": "Dzitya, Mérida.",
-        "cover": "/images/fachada-principal-1200x869-96.jpg",
+        "cover": "/images/fachada-principal-1200x869-96-min.jpg",
         "gallery": []
     },
     {
@@ -36,7 +36,7 @@
         "name": "Casa Altabrisa M - E",
         "year": 2015,
         "ubication": "Altabrisa, Mérida.",
-        "cover": "/images/fachada-principal-1-1200x857-12.jpg",
+        "cover": "/images/fachada-principal-1-1200x857-12-min.jpg",
         "gallery": []
     },
     {
@@ -44,7 +44,7 @@
         "name": "Casa Leandro Valle",
         "year": 2015,
         "ubication": "Leandro Valle, Mérida.",
-        "cover": "/images/fachada-1200x894-78.jpg",
+        "cover": "/images/fachada-1200x894-78-min.jpg",
         "gallery": []
     },
     {
@@ -52,7 +52,7 @@
         "name": "Remodelacion de Fachada Casa Pensiones",
         "year": 2016,
         "ubication": null,
-        "cover": "/images/img-2158-600x400-8.jpg",
+        "cover": "/images/img-2158-600x400-8-min.jpg",
         "gallery": []
     },
     {
@@ -60,7 +60,7 @@
         "name": "Casa San Ramón A-G",
         "year": 2016,
         "ubication": "San Ramon Norte, Mérida.",
-        "cover": "/images/fachada-pricnipal-1200x900-11.jpg",
+        "cover": "/images/fachada-pricnipal-1200x900-11-min.jpg",
         "gallery": []
     },
     {
@@ -68,7 +68,7 @@
         "name": "Casa Cholul E - P",
         "year": 2016,
         "ubication": "Guadalupe Cholul, Mérida.",
-        "cover": "/images/img-2278-600x450-72.jpg",
+        "cover": "/images/img-2278-600x450-72-min.jpg",
         "gallery": []
     },
     {
@@ -76,7 +76,7 @@
         "name": "Remodelación Terraza Pedregales de Linda Vista",
         "year": 2016,
         "ubication": "Pedregales de Linda Vista, Mérida",
-        "cover": "/images/piscina-600x336.jpg",
+        "cover": "/images/piscina-600x336-min.jpg",
         "gallery": []
     },
     {
@@ -84,7 +84,7 @@
         "name": "Remodelación Oficina + Depa",
         "year": 2017,
         "ubication": "Emiliano Zapata Nte, Mérida.",
-        "cover": "/images/img-485-600x1024.jpg",
+        "cover": "/images/img-485-600x1024-min.jpg",
         "gallery": []
     },
     {
@@ -92,7 +92,7 @@
         "name": "GIN 47 Mixology & Kitchen",
         "year": 2017,
         "ubication": "Torre SkyCity 8 piso, Mérida.",
-        "cover": "/images/600x450.jpg",
+        "cover": "/images/600x450-min.jpg",
         "gallery": []
     },
     {
@@ -100,7 +100,7 @@
         "name": "Casa M & N",
         "year": 2018,
         "ubication": "Dzytia, Mérida.",
-        "cover": "/images/img-4867-600x600.jpg",
+        "cover": "/images/img-4867-600x600-min.jpg",
         "gallery": []
     },
     {
@@ -108,7 +108,7 @@
         "name": "Remodelación Terraza Nuevo Yucatán",
         "year": 2018,
         "ubication": null,
-        "cover": "/images/antes-desp-600x450.jpg",
+        "cover": "/images/antes-desp-600x450-min.jpg",
         "gallery": []
     },
     {
@@ -116,7 +116,7 @@
         "name": "Remodelación \"Bamboo\"",
         "year": 2018,
         "ubication": "Cholul",
-        "cover": "/images/303b3635-a25e-4684-9a91-d392905a2711-600x400.jpg",
+        "cover": "/images/303b3635-a25e-4684-9a91-d392905a2711-600x400-min.jpg",
         "gallery": []
     },
     {
@@ -124,7 +124,7 @@
         "name": "Casa Dzitya Mérida",
         "year": 2018,
         "ubication": "Dzitya",
-        "cover": "/images/0d1efded-d127-4141-b5a0-267b1bec7134-600x800.jpg",
+        "cover": "/images/0d1efded-d127-4141-b5a0-267b1bec7134-600x800-min.jpg",
         "gallery": []
     },
     {
@@ -132,7 +132,7 @@
         "name": "Casa Cholul Mérida",
         "year": 2018,
         "ubication": "Cholul",
-        "cover": "/images/2000x2031.jpg",
+        "cover": "/images/2000x2031-min.jpg",
         "gallery": []
     },
     {
@@ -140,7 +140,7 @@
         "name": "Remodelación Alura U",
         "year": 2019,
         "ubication": null,
-        "cover": "/images/0832dcec-8833-4b2d-8252-9debd50ba169-600x450.jpg",
+        "cover": "/images/0832dcec-8833-4b2d-8252-9debd50ba169-600x450-min.jpg",
         "gallery": []
     },
     {
@@ -148,7 +148,7 @@
         "name": "Remodelación Alura M",
         "year": 2019,
         "ubication": null,
-        "cover": "/images/8f80c36e-a7d1-4b8b-9262-548a5a6e1931-600x338.jpg",
+        "cover": "/images/8f80c36e-a7d1-4b8b-9262-548a5a6e1931-600x338-min.jpg",
         "gallery": []
     },
     {
@@ -156,7 +156,7 @@
         "name": "Departamentos Maya 11",
         "year": 2019,
         "ubication": null,
-        "cover": "/images/gptempdownload-15-600x450.jpg",
+        "cover": "/images/gptempdownload-15-600x450-min.jpg",
         "gallery": []
     },
     {
@@ -164,7 +164,7 @@
         "name": "Casa Dzitya JR",
         "year": 2019,
         "ubication": null,
-        "cover": "/images/casa-dzitya-jr/1.jpg",
+        "cover": "/images/casa-dzitya-jr/1-min.jpg",
         "gallery": [
             "/images/casa-dzitya-jr/1.jpg",
             "/images/casa-dzitya-jr/2.jpeg",
@@ -184,7 +184,7 @@
         "name": "Casa Conkal RL",
         "year": 2019,
         "ubication": null,
-        "cover": "/images/casa-rich-leon/6.jpeg",
+        "cover": "/images/casa-rich-leon/6-min.jpeg",
         "gallery": [
             "/images/casa-rich-leon/1.jpeg",
             "/images/casa-rich-leon/2.jpeg",
@@ -204,7 +204,7 @@
         "name": "Alamanda",
         "year": 2019,
         "ubication": null,
-        "cover": "/images/alamanda/IMG_5010.JPG",
+        "cover": "/images/alamanda/IMG_5010-min.JPG",
         "gallery": [
             "/images/alamanda/IMG_5001.JPG",
             "/images/alamanda/IMG_5003.JPG",
@@ -224,7 +224,7 @@
         "name": "Casa Cholul",
         "year": 2020,
         "ubication": null,
-        "cover": "/images/casa-cholul/IMG-6934.jpg",
+        "cover": "/images/casa-cholul/IMG-6934-min.jpg",
         "gallery": [
             "/images/casa-cholul/IMG-6934.jpg",
             "/images/casa-cholul/IMG-6935.jpeg",
