--- a/.github/workflows/cypress-tests.yaml
+++ b/.github/workflows/cypress-tests.yaml
@@ -8,10 +8,9 @@ jobs:
   test-with-Cypress:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
         uses: actions/checkout@v2
-      
-      - name: Cypress tests
+
+        run: npm install
         uses: ./
         with:
           working-directory: /
