--- a/.github/workflows/cypress-tests.yaml
+++ b/.github/workflows/cypress-tests.yaml
@@ -8,10 +8,10 @@ jobs:
   test-with-Cypress:
     runs-on: ubuntu-latest
     steps:
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-        run: npm install
-        uses: ./
+      - run: npm install
+      - uses: ./
         with:
           working-directory: /
           build: npx cypress info
